--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
       </a>
   </div>
   <div id="aboutMe">
-    <h1 style="font-size:6em;padding-top:20vh;">I'm Natalie</h1>
-    <h1 style="font-size:3em;">It's nice to meet you!</h1>
-      <a class="scrolly" href="#dev" id="initiateTurtle">
-        <i class="fa fa-chevron-down fa-2x" aria-hidden="true"></i>
-      </a>
+      <h1 style="font-size:6em;padding-top:40px;">I'm Natalie</h1>
+      <h1 style="font-size:3em;">It's nice to meet you!</h1>
+      <img class="coral" src="img/coral.png"></img>
+      <img class="coral" style="margin-left:49%;" src="img/coral2.png"></img>
+    <a class="scrolly" href="#dev" id="initiateTurtle">
+      <i class="fa fa-chevron-down fa-2x" aria-hidden="true"></i>
+    </a>
   </div>
   <div class="subbody">
     <div id="dev">
@@ -49,7 +51,7 @@
             </ul>
           </div>
         </div>
-        <h2 style="margin-top:-20%;padding-bottom:10px;">I'm quite comfortable in a shell environment!</h2>
+        <h2 style="margin-top:-20%;margin-top:-35vh;padding-bottom:10vh;">I'm quite comfortable in a shell environment!</h2>
         <img class="turtle" src="img/turtle.png"></img>
       </span>
       <a class="scrolly" href="#dancer" id="initiateStar">
@@ -57,38 +59,30 @@
       </a>
     </div>
     <div id="dancer">
-        <h1 style="font-size:3.5em;margin-bottom:100px;">But at night, I'm also a ballerina!</h1>
+        <h1 style="font-size:3em;margin-bottom:100px;">But at night, I'm also a ballerina!</h1>
         <span>
-          <div class="text-body" style="margin-top:100px;">
-            <table style="margin-left:50px;">
-              <col align="left">
-              <col align="right">
-              <tr>
-                <th>Experience</th>
-                <th>Skills</th>
-              </tr>
-              <tr>
-                <td style="width:10%;padding-right:400px;">
-                  <ul>
-                  <li>15 Years of Training</li>
-                  <li>4 Years of Teaching Experience</li>
-                  <li>Completion of Joffrey Ballet Schools's Summer Intensive</li>
-                </ul>
-              </td>
-                <td style="width:10%;">
-                  <ul>
-                    <li>Ballet</li>
-                    <li>Pointe</li>
-                    <li>Contemporary</li>
-                    <li>Jazz</li>
-                    <li>Modern</li>
-                  </ul>
-                </td>
-              </tr>
-            </table>
+          <div class="star-text">
+            <p>Experience</p>
+            <ul>
+            <li>15 Years of Training</li>
+            <li>4 Years of Teaching Experience</li>
+            <li>Completion of Joffrey Ballet School's Summer Intensive</li>
+          </ul>
           </div>
-          <img class="starfish" src="img/starfish.png"></img>
-          <h2 style="text-align:center;margin-right:0;">Once I star-ted dancing, I never stopped!</h2>
+          <div style="position:relative;float:left;">
+            <img class="starfish" src="img/starfish.png"></img>
+            <h2 class="star-caption">Once I star-ted dancing, I never stopped!</h2>
+          </div>
+          <div class="star-text">
+            <p>Skills</p>
+            <ul>
+              <li>Ballet</li>
+              <li>Pointe</li>
+              <li>Contemporary</li>
+              <li>Jazz</li>
+              <li>Modern</li>
+            </ul>
+          </div>
         </span>
       <a class="scrolly" href="#ux" id="initiateFish">
         <i class="fa fa-chevron-down fa-2x" aria-hidden="true"></i>
@@ -114,9 +108,30 @@
         </a>
     </div>
     <div id="passions">
-      <h1 style="font-size:3.5em;padding-bottom:10px;">I have many projects and passions...</h1>
-      <a href="https://github.com/nlane">
-        <img class="github" src="img/Octocat.png"></img>
+      <h1 style="font-size:3.5em;padding-bottom:50px;">Check out my work here!</h1>
+      <div style="margin-left:8%;">
+      <div style="float:left;width:47%;">
+        <a href="https://github.com/nlane">
+          <img class="github" src="img/Octocat.png"></img>
+        </a>
+        <h1 style="text-align:center;margin-top:25%;font-size:3em;">Github Projects</h1>
+    </div>
+    <div style="float:left;width:47%;">
+      <a href="http://blog.nlane.site">
+        <img class="github" src="img/jelly.png" style="padding-right:40px;"></img>
+      </a>
+      <h1 style="text-align:center;margin-top:25%;font-size:3em;">Blog Posts</h1>
+      <a class="scrolly" href="#last">
+        <i class="fa fa-chevron-down fa-2x" aria-hidden="true"></i>
+      </a>
+  </div>
+</div>
+    </div>
+    <div id="last">
+      <h1 style="font-size:3.5em;padding-bottom:50px;">Whale, goodbye!</h1>
+      <img class="whale" src="img/whale.png" style="margin-top:10vh;"></img>
+      <a class="scrolly" href="#intro">
+        <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
       </a>
     </div>
   </div>
