--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </ul>
           </div>
         </div>
-        <h2 style="margin-top:-20%;margin-top:-35vh;padding-bottom:10vh;">I'm quite comfortable in a shell environment!</h2>
+        <h2 class="turtle-text">I'm quite comfortable in a shell environment!</h2>
         <img class="turtle" src="img/turtle.png"></img>
       </span>
       <a class="scrolly" href="#dancer" id="initiateStar">
