--- a/index.html
+++ b/index.html
@@ -109,26 +109,25 @@
     </div>
     <div id="passions">
       <h1 style="font-size:3.5em;padding-bottom:50px;">Check out my work here!</h1>
-      <div style="margin-left:8%;">
-      <div style="float:left;width:47%;">
+      <div style="margin-left:10%;">
         <a href="https://github.com/nlane">
           <img class="github" src="img/Octocat.png"></img>
         </a>
-        <h1 style="text-align:center;margin-top:25%;font-size:3em;">Github Projects</h1>
-    </div>
-    <div style="float:left;width:47%;">
       <a href="http://blog.nlane.site">
         <img class="github" src="img/jelly.png" style="padding-right:40px;"></img>
       </a>
-      <h1 style="text-align:center;margin-top:25%;font-size:3em;">Blog Posts</h1>
+    </div>
+    <div style="margin-top:20%;">
+      <p style="font-size:3em;width:30%;float:left;margin-left:-75%;">Github Projects</p>
+      <p style="font-size:3em;width:30%;float:left;margin-left:10%;margin-top:2.7%;">Blog Posts</p>
+    </div>
       <a class="scrolly" href="#last">
         <i class="fa fa-chevron-down fa-2x" aria-hidden="true"></i>
       </a>
-  </div>
 </div>
     </div>
     <div id="last">
-      <h1 style="font-size:3.5em;padding-bottom:50px;">Whale, goodbye!</h1>
+      <h1 style="font-size:3.5em;padding-bottom:50px;margin-top:0;">Whale, goodbye!</h1>
       <img class="whale" src="img/whale.png" style="margin-top:10vh;"></img>
       <a class="scrolly" href="#intro">
         <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
