--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
           <img class="fish" src="img/fish.png" style="display:inline;"></img>
         </div>
-        <h2>Small Fish in a Big City!</h2>
+        <h2 class="fishCaption">Small Fish in a Big City!</h2>
         <a class="scrolly" href="#passions">
           <i class="fa fa-chevron-down fa-2x" aria-hidden="true"></i>
         </a>
@@ -118,8 +118,8 @@
       </a>
     </div>
     <div style="margin-top:20%;">
-      <p style="font-size:3em;width:30%;float:left;margin-left:-75%;">Github Projects</p>
-      <p style="font-size:3em;width:30%;float:left;margin-left:12%;margin-top:2.7%;">Blog Posts</p>
+      <p class="passionCaption" id="git">Github Projects</p>
+      <p class="passionCaption" id="blog">Blog Posts</p>
     </div>
       <a class="scrolly" href="#last">
         <i class="fa fa-chevron-down fa-2x" aria-hidden="true"></i>
@@ -128,7 +128,9 @@
     </div>
     <div id="last">
       <h1 style="font-size:3.5em;padding-bottom:50px;margin-top:0;">Whale, goodbye!</h1>
+  <div class="relative-container">
       <img class="whale" src="img/whale.png" style="margin-top:10vh;"></img>
+    </div>
       <a class="scrolly" href="#intro">
         <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
       </a>
