changing height for mobile

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </a>
   </div>
   <div id="aboutMe">
-      <h1 style="font-size:6em;padding-top:40px;">I'm Natalie</h1>
+      <h1 class="greeting">I'm Natalie</h1>
       <h1 style="font-size:3em;">It's nice to meet you!</h1>
       <img class="coral" src="img/coral.png"></img>
       <img class="coral" style="margin-left:49%;" src="img/coral2.png"></img>
@@ -31,7 +31,7 @@
   </div>
   <div class="subbody">
     <div id="dev">
-      <h1 style="font-size:3.5em;margin-bottom:40px;">Most people know me as a developer...</h1>
+      <h1 class="devHeader">Most people know me as a developer...</h1>
       <span>
         <div class="relative-container">
           <div class="text-body">
@@ -89,7 +89,7 @@
       </a>
     </div>
     <div id="ux">
-      <h1 style="font-size:3.5em;padding-bottom:10px;">Right now, I live and work in NYC</h1>
+      <h1 class="uxHeader">Right now, I live and work in NYC</h1>
         <div class="relative-container">
         <div class="text-body">
           <p style="width:50%;">
@@ -114,7 +114,7 @@
           <img class="github" src="img/Octocat.png"></img>
         </a>
       <a href="http://blog.nlane.site">
-        <img class="github" src="img/jelly.png" style="padding-right:40px;"></img>
+        <img class="github" id="jelly" src="img/jelly.png" style="padding-right:40px;"></img>
       </a>
     </div>
     <div style="margin-top:20%;">
