--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </a>
     </div>
     <div id="dancer">
-        <h1 style="font-size:3em;margin-bottom:100px;">But at night, I'm also a ballerina!</h1>
+        <h1 class="dancerHeader">But at night, I'm also a ballerina!</h1>
         <span>
           <div class="star-text">
             <p>Experience</p>
